# reg-seq_env

./: .gitignore  LICENSE  README.md  fastp.txt  fastp.yaml  fastp_env.yaml  pyproject.toml
code/: README.md
code/dashboards/: footprints_meta.csv  hmm_results.csv  interactive_footprints.py  regulonDB_meta.csv
data/: README.md
data/expression_shifts/: 1-1_exshifts.csv  1-2_exshifts.csv  10-1_exshifts.csv  10-2_exshifts.csv  11-1_exshifts.csv  11-2_exshifts.csv  12-1_exshifts.csv  12-2_exshifts.csv  13-1_exshifts.csv  13-2_exshifts.csv  13-3_exshifts.csv  14-1_exshifts.csv  14-2_exshifts.csv  14-3_exshifts.csv  15-1_exshifts.csv  15-2_exshifts.csv  15-3_exshifts.csv  16-1_exshifts.csv  16-2_exshifts.csv  17-1_exshifts.csv  17-2_exshifts.csv  18-1_exshifts.csv  18-2_exshifts.csv  19-1_exshifts.csv  19-2_exshifts.csv  19-3_exshifts.csv  2-1_exshifts.csv  2-2_exshifts.csv  20-1_exshifts.csv  20-2_exshifts.csv  21-1_exshifts.csv  21-2_exshifts.csv  22-1_exshifts.csv  22-2_exshifts.csv  22-3_exshifts.csv  23-1_exshifts.csv  23-2_exshifts.csv  24-1_exshifts.csv  24-2_exshifts.csv  25-1_exshifts.csv  (+48 more)
data/footprints/: 1-1_footprints.csv  1-2_footprints.csv  10-1_footprints.csv  10-2_footprints.csv  11-1_footprints.csv  11-2_footprints.csv  12-1_footprints.csv  12-2_footprints.csv  13-1_footprints.csv  13-2_footprints.csv  13-3_footprints.csv  14-1_footprints.csv  (+76 more)
notebooks/: compute_footprints.ipynb  example_processing_sequencing_data.ipynb  filtering_barcode_example.sh  filtering_example.sh  filtering_mapping_example.sh  processing_sequencing_data.ipynb
(+29 files in other folders)
